upgrade dependencies + cleaning